# ollama-tui

./: README.md  TODO.md  pyproject.toml
ollama_cli/: main.py  style.css
